fix styling change the title and logo and also change images overall

--- a/blog.html
+++ b/blog.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Graceful Garb</title>
+    <title>libas</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" />
     <script src="script.js" defer></script>
@@ -17,7 +17,7 @@
 
     <!-- Header Section for Navbar -->
     <section id="header">
-        <a href="#" class="logo">G-Garb</a>
+        <a href="#" class="logo">libas</a>
         <div>
             <ul id="navbar">
                 <li><a href="index.html">Home</a></li>
@@ -49,7 +49,7 @@
                 <img src="img/blog/b1.jpg" alt="">
             </div>
             <div class="blog-details">
-                <h4>The Cotton-Jersey Zip-Up Hoodie</h4>
+                <h4>The Cotton-Suits Hoodie</h4>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quo quod totam doloribus illo, sapiente
                     placeat eaque doloremque alias cum aliquam nisi molestias excepturi nam sequi dicta cupiditate
                     repellat veritatis porro!</p>
@@ -63,7 +63,7 @@
                 <img src="img/blog/b2.jpg" alt="">
             </div>
             <div class="blog-details">
-                <h4>The Cotton-Jersey Zip-Up Hoodie</h4>
+                <h4>The Cotton-Suits Hoodie</h4>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quo quod totam doloribus illo, sapiente
                     placeat eaque doloremque alias cum aliquam nisi molestias excepturi nam sequi dicta cupiditate
                     repellat veritatis porro!</p>
@@ -77,7 +77,7 @@
                 <img src="img/blog/b3.jpg" alt="">
             </div>
             <div class="blog-details">
-                <h4>The Cotton-Jersey Zip-Up Hoodie</h4>
+                <h4>The Cotton-Suits Hoodie</h4>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quo quod totam doloribus illo, sapiente
                     placeat eaque doloremque alias cum aliquam nisi molestias excepturi nam sequi dicta cupiditate
                     repellat veritatis porro!</p>
@@ -91,7 +91,7 @@
                 <img src="img/blog/b4.jpg" alt="">
             </div>
             <div class="blog-details">
-                <h4>The Cotton-Jersey Zip-Up Hoodie</h4>
+                <h4>The Cotton-Suits Hoodie</h4>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quo quod totam doloribus illo, sapiente
                     placeat eaque doloremque alias cum aliquam nisi molestias excepturi nam sequi dicta cupiditate
                     repellat veritatis porro!</p>
@@ -105,7 +105,7 @@
                 <img src="img/blog/b6.jpg" alt="">
             </div>
             <div class="blog-details">
-                <h4>The Cotton-Jersey Zip-Up Hoodie</h4>
+                <h4>The Cotton-Suits Hoodie</h4>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quo quod totam doloribus illo, sapiente
                     placeat eaque doloremque alias cum aliquam nisi molestias excepturi nam sequi dicta cupiditate
                     repellat veritatis porro!</p>
@@ -139,7 +139,7 @@
     <!-- Footer Section -->
     <footer class="section-p1">
         <div class="col">
-            <a href="#" class="logo">G-Garb</a>
+            <a href="#" class="logo">libas</a>
             <h4> <strong>Contact</strong> </h4>
             <p><strong>Address:</strong> Lucknow </p>
             <p><strong>Phone:</strong> +917607255678 </p>
@@ -186,7 +186,7 @@
         </div>
 
         <div class="copyright">
-            <p>&copy; 2023 Abdul Rahman BG-Zone E-commerce Website. All rights reserved.</p>
+            <p>&copy; 2023 Abdul Rahman libas E-commerce Website. All rights reserved.</p>
         </div>
     </footer>
 
