--- a/cart.html
+++ b/cart.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Graceful Garb</title>
+    <title>libas</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" />
     <script src="script.js" defer></script>
@@ -17,7 +17,7 @@
 
     <!-- Header Section for Navbar -->
     <section id="header">
-        <a href="#" class="logo">G-Garb</a>
+        <a href="#" class="logo">libas</a>
         <div>
             <ul id="navbar">
                 <li><a href="index.html">Home</a></li>
@@ -38,7 +38,7 @@
     <!-- Hero Section -->
     <section id="page-header" class="about-header">
         <h2>#cart</h2>
-        <p>add your coupon &SAVEVupto 70%!</p>
+        <p>add your coupon &SAVE upto 60%!</p>
 
     </section>
 
@@ -61,26 +61,26 @@
                 <tr>
                     <td><a href="#"> <i class="far fa-times-circle"></i> </a> </td>
                     <td><img src="img/products/f1.jpg" alt=""></td>
-                    <td>Cartoon Astronut T-shirts</td>
-                    <td>$110.20</td>
+                    <td>Cotton Woman Suits</td>
+                    <td>INR - 1170</td>
                     <td><input type="number" value="1"></td>
-                    <td>$110.20</td>
+                    <td>INR - 1170</td>
                 </tr>
                 <tr>
                     <td><a href="#"> <i class="far fa-times-circle"></i> </a> </td>
                     <td><img src="img/products/f2.jpg" alt=""></td>
-                    <td>Cartoon Astronut T-shirts</td>
-                    <td>$136.20</td>
+                    <td>Cotton Woman Suits</td>
+                    <td>INR - 1370</td>
                     <td><input type="number" value="1"></td>
-                    <td>$136.20</td>
+                    <td>INR - 1370</td>
                 </tr>
                 <tr>
                     <td><a href="#"> <i class="far fa-times-circle"></i> </a> </td>
                     <td><img src="img/products/f3.jpg" alt=""></td>
-                    <td>Cartoon Astronut T-shirts</td>
-                    <td>$100.20</td>
+                    <td>Cotton Woman Suits</td>
+                    <td>INR - 1070</td>
                     <td><input type="number" value="1"></td>
-                    <td>$100.20</td>
+                    <td>INR - 1070</td>
                 </tr>
             </tbody>
 
@@ -102,7 +102,7 @@
             <table>
                 <tr>
                     <td>Cart Subtotal</td>
-                    <td>$335</td>
+                    <td>INR - 1170</td>
                 </tr>
                 <tr>
                     <td>Shipping</td>
@@ -110,7 +110,7 @@
                 </tr>
                 <tr>
                     <td><strong>Total</strong></td>
-                    <td><strong>$335</strong></td>
+                    <td><strong>INR - 1170</strong></td>
                 </tr>
             </table>
             <button class="normal">Proceed to Checkout</button>
@@ -120,7 +120,7 @@
     <!-- Footer Section -->
     <footer class="section-p1">
         <div class="col">
-            <a href="#" class="logo">G-Garb</a>
+            <a href="#" class="logo">libas</a>
             <h4> <strong>Contact</strong> </h4>
             <p><strong>Address:</strong> Lucknow </p>
             <p><strong>Phone:</strong> +917607255678 </p>
@@ -167,7 +167,7 @@
         </div>
 
         <div class="copyright">
-            <p>&copy; 2023 Abdul Rahman BG-Zone E-commerce Website. All rights reserved.</p>
+            <p>&copy; 2023 Abdul Rahman libas E-commerce Website. All rights reserved.</p>
         </div>
     </footer>
 
