--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Graceful Garb</title>
+    <title>libas</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" />
     <script src="script.js" defer></script>
@@ -17,7 +17,7 @@
 
     <!-- Header Section for Navbar -->
     <section id="header">
-        <a href="#" class="logo">G-Garb</a>
+        <a href="#" class="logo">libas</a>
         <div>
             <ul id="navbar">
                 <li><a href="index.html">Home</a></li>
@@ -38,7 +38,7 @@
     <!-- Hero Section -->
     <section id="page-header" class="about-header">
         <h2>#let's_talk</h2>
-        <p>KEAVE A MESSAGE. We love to hear from you!</p>
+        <p>LEAVE A MESSAGE. We love to hear from you!</p>
 
     </section>
 
@@ -96,15 +96,15 @@
                 </p>
             </div>
             <div>
-                <img src="img/people/Ar.jpg" alt="" srcset="">
-                <p><span>Abdul Rahman </span>Full Stack Developer <br>Phone: +916389070133 <br>Email: iamarsiddiqui@gmail.com
+                <img src="https://media.licdn.com/dms/image/D5635AQHUDW2cJ7q9bA/profile-framedphoto-shrink_400_400/0/1656564701134?e=1701727200&v=beta&t=pGVKjx66xM9RZAGreKJliZnWHD0eDXPPm7iTqnUkigo" alt="" srcset="">
+                <p><span>Dr. Abdul Salam </span> Physiotherapy <br>Phone: +916389070133 <br>Email: iamarsiddiqui@gmail.com
                 </p>
             </div>
-            <div>
+            <!-- <div>
                 <img src="img/people/Ar.jpg" alt="" srcset="">
                 <p><span>Abdul Rahman </span>Full Stack Developer <br>Phone: +917607255678 <br>Email: ar7337495@gmail.com
                 </p>
-            </div>
+            </div> -->
 
         </div>
     </section>
@@ -124,7 +124,7 @@
     <!-- Footer Section -->
     <footer class="section-p1">
         <div class="col">
-            <a href="#" class="logo">G-Garb</a>
+            <a href="#" class="logo">libas</a>
             <h4> <strong>Contact</strong> </h4>
             <p><strong>Address:</strong> Lucknow </p>
             <p><strong>Phone:</strong> +917607255678 </p>
@@ -171,7 +171,7 @@
         </div>
 
         <div class="copyright">
-            <p>&copy; 2023 Abdul Rahman BG-Zone E-commerce Website. All rights reserved.</p>
+            <p>&copy; 2023 Abdul Rahman libas E-commerce Website. All rights reserved.</p>
         </div>
     </footer>
 
