--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Graceful Garb</title>
+    <title>libas</title>
 
 
     <!-- link CSS file -->
@@ -21,7 +21,7 @@
 
     <!-- Header Section for Navbar -->
     <section id="header">
-        <a href="#" class="logo">G-Garb</a>
+        <a href="#" class="logo">libas</a>
         <div>
             <ul id="navbar">
                 <li><a class="active" href="index.html">Home</a></li>
@@ -42,9 +42,10 @@
     <!-- Hero Section -->
     <section id="hero">
         <h4> Trade in Offer</h4>
-        <h2>The Graceful Garb</h2>
+        <h2>The Graceful Libas</h2>
         <h1>On All product</h1>
-        <p> Save more with coupons & up to 70% off! </p>
+        
+        <p> Save more with coupons & up to 60% off! </p>
         <button>Shop Now</button>
     </section>
 
@@ -88,14 +89,15 @@
 
         <h2>Featured Product</h2>
         <p> Summer Collection New Morden Design</p>
+        
 
         <div class="pro-container">
             <div class="pro">
                 <img src="/img/products/p1.jpeg" alt="">
 
                 <div class="des">
-                    <span>adidas</span>
-                    <h5> Cartoon Astronaut T-Shirts </h5>
+                    <span>libas</span>
+                    <h5> The Cotton -Suits  </h5>
 
                     <div class="star">
                         <i class="fas fa-star"></i>
@@ -105,7 +107,7 @@
                         <i class="fas fa-star"></i>
                     </div>
 
-                    <h4>$78</h4>
+                    <h4>INR  - 1170</h4>
                 </div>
                 <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
             </div>
@@ -113,8 +115,8 @@
                 <img src="/img/products/p2.jpeg" alt="">
 
                 <div class="des">
-                    <span>adidas</span>
-                    <h5> Cartoon Astronaut T-Shirts </h5>
+                    <span>libas</span>
+                    <h5> The Cotton -Suits  </h5>
 
                     <div class="star">
                         <i class="fas fa-star"></i>
@@ -124,7 +126,7 @@
                         <i class="fas fa-star"></i>
                     </div>
 
-                    <h4>$78</h4>
+                    <h4>INR  - 1170</h4>
                 </div>
                 <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
             </div>
@@ -132,8 +134,8 @@
                 <img src="/img/products/p3.jpeg" alt="">
 
                 <div class="des">
-                    <span>adidas</span>
-                    <h5> Cartoon Astronaut T-Shirts </h5>
+                    <span>libas</span>
+                    <h5> The Cotton -Suits  </h5>
 
                     <div class="star">
                         <i class="fas fa-star"></i>
@@ -143,7 +145,7 @@
                         <i class="fas fa-star"></i>
                     </div>
 
-                    <h4>$78</h4>
+                    <h4>INR  - 1170</h4>
                 </div>
                 <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
             </div>
@@ -151,8 +153,8 @@
                 <img src="/img/products/p4.jpeg" alt="">
 
                 <div class="des">
-                    <span>adidas</span>
-                    <h5> Cartoon Astronaut T-Shirts </h5>
+                    <span>libas</span>
+                    <h5> The Cotton -Suits  </h5>
 
                     <div class="star">
                         <i class="fas fa-star"></i>
@@ -162,7 +164,7 @@
                         <i class="fas fa-star"></i>
                     </div>
 
-                    <h4>$78</h4>
+                    <h4>INR  - 1170</h4>
                 </div>
                 <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
             </div>
@@ -170,8 +172,8 @@
                 <img src="/img/products/p5.jpg" alt="">
 
                 <div class="des">
-                    <span>adidas</span>
-                    <h5> Cartoon Astronaut T-Shirts </h5>
+                    <span>libas</span>
+                    <h5> The Cotton -Suits  </h5>
 
                     <div class="star">
                         <i class="fas fa-star"></i>
@@ -181,7 +183,7 @@
                         <i class="fas fa-star"></i>
                     </div>
 
-                    <h4>$78</h4>
+                    <h4>INR  - 1170</h4>
                 </div>
                 <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
             </div>
@@ -189,8 +191,8 @@
                 <img src="/img/products/p6.jpg" alt="">
 
                 <div class="des">
-                    <span>adidas</span>
-                    <h5> Cartoon Astronaut T-Shirts </h5>
+                    <span>libas</span>
+                    <h5> The Cotton -Suits  </h5>
 
                     <div class="star">
                         <i class="fas fa-star"></i>
@@ -200,7 +202,7 @@
                         <i class="fas fa-star"></i>
                     </div>
 
-                    <h4>$78</h4>
+                    <h4>INR  - 1170</h4>
                 </div>
                 <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
             </div>
@@ -208,8 +210,8 @@
                 <img src="/img/products/p7.jpg" alt="">
 
                 <div class="des">
-                    <span>adidas</span>
-                    <h5> Cartoon Astronaut T-Shirts </h5>
+                    <span>libas</span>
+                    <h5> The Cotton -Suits  </h5>
 
                     <div class="star">
                         <i class="fas fa-star"></i>
@@ -219,7 +221,7 @@
                         <i class="fas fa-star"></i>
                     </div>
 
-                    <h4>$78</h4>
+                    <h4>INR  - 1170</h4>
                 </div>
                 <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
             </div>
@@ -227,8 +229,8 @@
                 <img src="/img/products/p8.jpg" alt="">
 
                 <div class="des">
-                    <span>adidas</span>
-                    <h5> Cartoon Astronaut T-Shirts </h5>
+                    <span>libas</span>
+                    <h5> The Cotton -Suits  </h5>
 
                     <div class="star">
                         <i class="fas fa-star"></i>
@@ -238,7 +240,7 @@
                         <i class="fas fa-star"></i>
                     </div>
 
-                    <h4>$78</h4>
+                    <h4>INR  - 1170</h4>
                 </div>
                 <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
             </div>
@@ -264,8 +266,8 @@
                 <img src="/img/products/b10.jpg" alt="">
 
                 <div class="des">
-                    <span>adidas</span>
-                    <h5> Cartoon Astronaut T-Shirts </h5>
+                    <span>libas</span>
+                    <h5> The Cotton -Suits  </h5>
 
                     <div class="star">
                         <i class="fas fa-star"></i>
@@ -275,7 +277,7 @@
                         <i class="fas fa-star"></i>
                     </div>
 
-                    <h4>$78</h4>
+                    <h4>INR  - 1170</h4>
                 </div>
                 <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
             </div>
@@ -283,8 +285,8 @@
                 <img src="/img/products/b3.jpg" alt="">
 
                 <div class="des">
-                    <span>adidas</span>
-                    <h5> Cartoon Astronaut T-Shirts </h5>
+                    <span>libas</span>
+                    <h5> The Cotton -Suits  </h5>
 
                     <div class="star">
                         <i class="fas fa-star"></i>
@@ -294,7 +296,7 @@
                         <i class="fas fa-star"></i>
                     </div>
 
-                    <h4>$78</h4>
+                    <h4>INR  - 1170</h4>
                 </div>
                 <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
             </div>
@@ -302,8 +304,8 @@
                 <img src="/img/products/b4.jpg" alt="">
 
                 <div class="des">
-                    <span>adidas</span>
-                    <h5> Cartoon Astronaut T-Shirts </h5>
+                    <span>libas</span>
+                    <h5> The Cotton -Suits  </h5>
 
                     <div class="star">
                         <i class="fas fa-star"></i>
@@ -313,7 +315,7 @@
                         <i class="fas fa-star"></i>
                     </div>
 
-                    <h4>$78</h4>
+                    <h4>INR  - 1170</h4>
                 </div>
                 <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
             </div>
@@ -321,8 +323,8 @@
                 <img src="/img/products/b5.jpg" alt="">
 
                 <div class="des">
-                    <span>adidas</span>
-                    <h5> Cartoon Astronaut T-Shirts </h5>
+                    <span>libas</span>
+                    <h5> The Cotton -Suits  </h5>
 
                     <div class="star">
                         <i class="fas fa-star"></i>
@@ -332,7 +334,7 @@
                         <i class="fas fa-star"></i>
                     </div>
 
-                    <h4>$78</h4>
+                    <h4>INR  - 1170</h4>
                 </div>
                 <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
             </div>
@@ -340,8 +342,8 @@
                 <img src="/img/products/b6.jpg" alt="">
 
                 <div class="des">
-                    <span>adidas</span>
-                    <h5> Cartoon Astronaut T-Shirts </h5>
+                    <span>libas</span>
+                    <h5> The Cotton -Suits  </h5>
 
                     <div class="star">
                         <i class="fas fa-star"></i>
@@ -351,7 +353,7 @@
                         <i class="fas fa-star"></i>
                     </div>
 
-                    <h4>$78</h4>
+                    <h4>INR  - 1170</h4>
                 </div>
                 <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
             </div>
@@ -359,8 +361,8 @@
                 <img src="/img/products/b7.jpg" alt="">
 
                 <div class="des">
-                    <span>adidas</span>
-                    <h5> Cartoon Astronaut T-Shirts </h5>
+                    <span>libas</span>
+                    <h5> The Cotton -Suits  </h5>
 
                     <div class="star">
                         <i class="fas fa-star"></i>
@@ -370,7 +372,7 @@
                         <i class="fas fa-star"></i>
                     </div>
 
-                    <h4>$78</h4>
+                    <h4>INR  - 1170</h4>
                 </div>
                 <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
             </div>
@@ -378,8 +380,8 @@
                 <img src="/img/products/b8.jpg" alt="">
 
                 <div class="des">
-                    <span>adidas</span>
-                    <h5> Cartoon Astronaut T-Shirts </h5>
+                    <span>libas</span>
+                    <h5> The Cotton -Suits  </h5>
 
                     <div class="star">
                         <i class="fas fa-star"></i>
@@ -389,7 +391,7 @@
                         <i class="fas fa-star"></i>
                     </div>
 
-                    <h4>$78</h4>
+                    <h4>INR  - 1170</h4>
                 </div>
                 <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
             </div>
@@ -397,8 +399,8 @@
                 <img src="/img/products/b9.jpg" alt="">
 
                 <div class="des">
-                    <span>adidas</span>
-                    <h5> Cartoon Astronaut T-Shirts </h5>
+                    <span>libas</span>
+                    <h5> The Cotton -Suits  </h5>
 
                     <div class="star">
                         <i class="fas fa-star"></i>
@@ -408,7 +410,7 @@
                         <i class="fas fa-star"></i>
                     </div>
 
-                    <h4>$78</h4>
+                    <h4>INR  - 1170</h4>
                 </div>
                 <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
             </div>
@@ -465,7 +467,7 @@
     <!-- Footer Section -->
     <footer class="section-p1">
         <div class="col">
-            <a href="#" class="logo">G-Garb</a>
+            <a href="#" class="logo">libas</a>
             <h4> <strong>Contact</strong> </h4>
             <p><strong>Address:</strong> Lucknow </p>
             <p><strong>Phone:</strong> +917607255678 </p>
@@ -512,7 +514,7 @@
         </div>
 
         <div class="copyright">
-            <p>&copy; 2023 Abdul Rahman BG-Zone E-commerce Website. All rights reserved.</p>
+            <p>&copy; 2023 Abdul Rahman libas E-commerce Website. All rights reserved.</p>
         </div>
     </footer>
 
