--- a/shop.html
+++ b/shop.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Graceful Garb</title>
+    <title>libas</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" />
     <script src="script.js" defer></script>
@@ -17,7 +17,7 @@
 
     <!-- Header Section for Navbar -->
     <section id="header">
-        <a href="#" class="logo">G-Garb</a>
+        <a href="#" class="logo">libas</a>
         <div>
             <ul id="navbar">
                 <li><a href="index.html">Home</a></li>
@@ -53,8 +53,8 @@
                 <img src="/img/products/b10.jpg" alt="">
 
                 <div class="des">
-                    <span>adidas</span>
-                    <h5> Cartoon Astronaut T-Shirts </h5>
+                    <span>libas</span>
+                    <h5> The Cotton -Suits  </h5>
 
                     <div class="star">
                         <i class="fas fa-star"></i>
@@ -64,7 +64,7 @@
                         <i class="fas fa-star"></i>
                     </div>
 
-                    <h4>$78</h4>
+                    <h4>INR - 1170</h4>
                 </div>
                 <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
             </div>
@@ -72,8 +72,8 @@
                 <img src="/img/products/b3.jpg" alt="">
 
                 <div class="des">
-                    <span>adidas</span>
-                    <h5> Cartoon Astronaut T-Shirts </h5>
+                    <span>libas</span>
+                    <h5> The Cotton -Suits  </h5>
 
                     <div class="star">
                         <i class="fas fa-star"></i>
@@ -83,7 +83,7 @@
                         <i class="fas fa-star"></i>
                     </div>
 
-                    <h4>$78</h4>
+                    <h4>INR - 1170</h4>
                 </div>
                 <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
             </div>
@@ -91,8 +91,8 @@
                 <img src="/img/products/b4.jpg" alt="">
 
                 <div class="des">
-                    <span>adidas</span>
-                    <h5> Cartoon Astronaut T-Shirts </h5>
+                    <span>libas</span>
+                    <h5> The Cotton -Suits  </h5>
 
                     <div class="star">
                         <i class="fas fa-star"></i>
@@ -102,7 +102,7 @@
                         <i class="fas fa-star"></i>
                     </div>
 
-                    <h4>$78</h4>
+                    <h4>INR - 1170</h4>
                 </div>
                 <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
             </div>
@@ -110,8 +110,8 @@
                 <img src="/img/products/b5.jpg" alt="">
 
                 <div class="des">
-                    <span>adidas</span>
-                    <h5> Cartoon Astronaut T-Shirts </h5>
+                    <span>libas</span>
+                    <h5> The Cotton -Suits  </h5>
 
                     <div class="star">
                         <i class="fas fa-star"></i>
@@ -121,7 +121,7 @@
                         <i class="fas fa-star"></i>
                     </div>
 
-                    <h4>$78</h4>
+                    <h4>INR - 1170</h4>
                 </div>
                 <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
             </div>
@@ -129,8 +129,8 @@
                 <img src="/img/products/b6.jpg" alt="">
 
                 <div class="des">
-                    <span>adidas</span>
-                    <h5> Cartoon Astronaut T-Shirts </h5>
+                    <span>libas</span>
+                    <h5> The Cotton -Suits  </h5>
 
                     <div class="star">
                         <i class="fas fa-star"></i>
@@ -140,7 +140,7 @@
                         <i class="fas fa-star"></i>
                     </div>
 
-                    <h4>$78</h4>
+                    <h4>INR - 1170</h4>
                 </div>
                 <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
             </div>
@@ -148,8 +148,8 @@
                 <img src="/img/products/b7.jpg" alt="">
 
                 <div class="des">
-                    <span>adidas</span>
-                    <h5> Cartoon Astronaut T-Shirts </h5>
+                    <span>libas</span>
+                    <h5> The Cotton -Suits  </h5>
 
                     <div class="star">
                         <i class="fas fa-star"></i>
@@ -159,7 +159,7 @@
                         <i class="fas fa-star"></i>
                     </div>
 
-                    <h4>$78</h4>
+                    <h4>INR - 1170</h4>
                 </div>
                 <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
             </div>
@@ -167,8 +167,8 @@
                 <img src="/img/products/b8.jpg" alt="">
 
                 <div class="des">
-                    <span>adidas</span>
-                    <h5> Cartoon Astronaut T-Shirts </h5>
+                    <span>libas</span>
+                    <h5> The Cotton -Suits  </h5>
 
                     <div class="star">
                         <i class="fas fa-star"></i>
@@ -178,7 +178,7 @@
                         <i class="fas fa-star"></i>
                     </div>
 
-                    <h4>$78</h4>
+                    <h4>INR - 1170</h4>
                 </div>
                 <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
             </div>
@@ -186,8 +186,8 @@
                 <img src="/img/products/b9.jpg" alt="">
 
                 <div class="des">
-                    <span>adidas</span>
-                    <h5> Cartoon Astronaut T-Shirts </h5>
+                    <span>libas</span>
+                    <h5> The Cotton -Suits  </h5>
 
                     <div class="star">
                         <i class="fas fa-star"></i>
@@ -197,7 +197,7 @@
                         <i class="fas fa-star"></i>
                     </div>
 
-                    <h4>$78</h4>
+                    <h4>INR - 1170</h4>
                 </div>
                 <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
             </div>
@@ -227,7 +227,7 @@
     <!-- Footer Section -->
     <footer class="section-p1">
         <div class="col">
-            <a href="#" class="logo">G-Garb</a>
+            <a href="#" class="logo">libas</a>
             <h4> <strong>Contact</strong> </h4>
             <p><strong>Address:</strong> Lucknow </p>
             <p><strong>Phone:</strong> +917607255678 </p>
@@ -274,7 +274,7 @@
         </div>
 
         <div class="copyright">
-            <p>&copy; 2023 Abdul Rahman BG-Zone E-commerce Website. All rights reserved.</p>
+            <p>&copy; 2023 Abdul Rahman libas E-commerce Website. All rights reserved.</p>
         </div>
     </footer>
 
