--- a/sproduct.html
+++ b/sproduct.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GracefulGarb</title>
+    <title>libas</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" />
     <script src="script.js" defer></script>
@@ -17,7 +17,7 @@
 
     <!-- Header Section for Navbar -->
     <section id="header">
-        <a href="#" class="logo">G-Garb</a>
+        <a href="#" class="logo">libas</a>
         <div>
             <ul id="navbar">
                 <li><a href="index.html">Home</a></li>
@@ -38,27 +38,27 @@
     <!-- Single product description section -->
     <section id="prodetails" class="section-p1 ">
         <div class="single-pro-image">
-            <img src="img/products/f1.jpg" width="100%" id="MainImg" alt="">
+            <img src="img/products/p3.jpeg" width="100%" id="MainImg" alt="">
             <div class="small-img-group">
                 <div class="small-img-col">
-                    <img src="img/products/f1.jpg" width="100%" class="small-img" alt="">
+                    <img src="img/products/p4.jpeg" width="100%" class="small-img" alt="">
                 </div>
                 <div class="small-img-col">
-                    <img src="img/products/f2.jpg" width="100%" class="small-img" alt="">
+                    <img src="img/products/p5.jpg" width="100%" class="small-img" alt="">
                 </div>
                 <div class="small-img-col">
-                    <img src="img/products/f3.jpg" width="100%" class="small-img" alt="">
+                    <img src="img/products/p7.jpg" width="100%" class="small-img" alt="">
                 </div>
                 <div class="small-img-col">
-                    <img src="img/products/f4.jpg" width="100%" class="small-img" alt="">
+                    <img src="img/products/p2.jpeg" width="100%" class="small-img" alt="">
                 </div>
             </div>
         </div>
 
         <div class="single-pro-details">
-            <h6>Home / T-Shirts </h6>
-            <h4>BG Fashion T-Shirts</h4>
-            <h2>$78</h2>
+            <h6>Home / Suits </h6>
+            <h4>Libas Fashion Suits</h4>
+            <h2>INR -1320</h2>
             <select>
                 <option> Select Size</option>
                 <option>XL</option>
@@ -84,11 +84,11 @@
 
         <div class="pro-container">
             <div class="pro">
-                <img src="/img/products/n1.jpg" alt="">
+                <img src="/img/products/b3.jpg" alt="">
 
                 <div class="des">
-                    <span>adidas</span>
-                    <h5> Cartoon Astronaut T-Shirts </h5>
+                    <span>libas</span>
+                    <h5> The Cotton -Suits  </h5>
 
                     <div class="star">
                         <i class="fas fa-star"></i>
@@ -98,16 +98,16 @@
                         <i class="fas fa-star"></i>
                     </div>
 
-                    <h4>$78</h4>
+                    <h4>INR - 1320</h4>
                 </div>
                 <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
             </div>
             <div class="pro">
-                <img src="/img/products/n2.jpg" alt="">
+                <img src="/img/products/b4.jpg" alt="">
 
                 <div class="des">
-                    <span>adidas</span>
-                    <h5> Cartoon Astronaut T-Shirts </h5>
+                    <span>libas</span>
+                    <h5> The Cotton -Suits  </h5>
 
                     <div class="star">
                         <i class="fas fa-star"></i>
@@ -117,16 +117,16 @@
                         <i class="fas fa-star"></i>
                     </div>
 
-                    <h4>$78</h4>
+                    <h4>INR - 1320</h4>
                 </div>
                 <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
             </div>
             <div class="pro">
-                <img src="/img/products/n3.jpg" alt="">
+                <img src="/img/products/b5.jpg" alt="">
 
                 <div class="des">
-                    <span>adidas</span>
-                    <h5> Cartoon Astronaut T-Shirts </h5>
+                    <span>libas</span>
+                    <h5> The Cotton -Suits  </h5>
 
                     <div class="star">
                         <i class="fas fa-star"></i>
@@ -136,16 +136,16 @@
                         <i class="fas fa-star"></i>
                     </div>
 
-                    <h4>$78</h4>
+                    <h4>INR - 1320</h4>
                 </div>
                 <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
             </div>
             <div class="pro">
-                <img src="/img/products/n4.jpg" alt="">
+                <img src="/img/products/b6.jpg" alt="">
 
                 <div class="des">
-                    <span>adidas</span>
-                    <h5> Cartoon Astronaut T-Shirts </h5>
+                    <span>libas</span>
+                    <h5> The Cotton -Suits  </h5>
 
                     <div class="star">
                         <i class="fas fa-star"></i>
@@ -155,7 +155,7 @@
                         <i class="fas fa-star"></i>
                     </div>
 
-                    <h4>$78</h4>
+                    <h4>INR - 1320</h4>
                 </div>
                 <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
             </div>
@@ -179,7 +179,7 @@
     <!-- Footer Section -->
     <footer class="section-p1">
         <div class="col">
-            <a href="#" class="logo">G-Garb</a>
+            <a href="#" class="logo">libas</a>
             <h4> <strong>Contact</strong> </h4>
             <p><strong>Address:</strong> Lucknow </p>
             <p><strong>Phone:</strong> +917607255678 </p>
@@ -226,7 +226,7 @@
         </div>
 
         <div class="copyright">
-            <p>&copy; 2023 Abdul Rahman BG-Zone E-commerce Website. All rights reserved.</p>
+            <p>&copy; 2023 Abdul Rahman libas E-commerce Website. All rights reserved.</p>
         </div>
     </footer>
 
